Mar 18, 2010 - chris
o Optimization - if HAM_DAM_SEQUENTIAL_INSERT is set then btree nodes will
    not be split in the middle, but at the end of the node. hamsterdb will
    also auto-recognize if an insert is sequential (at the "right end" of 
    the index). This leads to MUCH smaller files and therefore higher
    performance (thanks, Simon)

Mar 10, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.3

Mar 10, 2010 - chris
o Bugfix - fixed an invalid read of 3 bytes in the freelist

Mar 07, 2010 - chris
o Implemented partial read/write - records can now be read or written 
    partially (see flag HAM_PARTIAL for ham_find, ham_insert and others)
    This new feature caused a change to ham_record_t, thus making the ABI
    of hamsterdb incompatible to older versions. This feature is test-covered
    by nearly 900 unittests.

Feb 27, 2010 - chris
o Bugfix - ham_get_parameter failed if database was opened read-only
    (thanks, Austin)

Feb 18, 2010 - chris
o Bugfix - if a cachesize was specified then it was not propagated correctly
    and ignored; this bugfix caused serious performance improvements compared
    to 1.1.2!

Feb 16, 2010 - chris
o Windows library and dll are now renamed to libhamsterdb-<version>.lib and
    hamsterdb-<version>.dll

Feb 11, 2010 - chris
o Added a new function to get the Environment handle of a Database
    (ham_get_env)

Feb 10, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.2

Feb 07, 2010 - chris
o Added documentation target; there's now one target for public documentation,
    one for internal and one for BFC (unittest framework) - thanks, Ger
o Finished a lot of refactoring - some from Ger, some from me

Feb 03, 2010 - chris
o Added comment in hamsterdb_int.h and hamsterdb_stats.h - these files describe
    internal interfaces! unlike hamsterdb.h they are never stable and can